Page MenuHome GnuPG

Reloading gpg-agent with disable-scdaemon set does not stop scdaemon.
Closed, ResolvedPublic

Description

When adding "disable-scdaemon" to gpg-agent.conf and running "gpgconf --reload gpg-agent" the scdaemon is not stopped but gpg-agent despite that gpg-agent does not allow an scdaemon commands anymore.

gpg-agent should check for a set disable-scdaemon option after a reload and kill scdaemon in this case.